--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.1",
     "recharts": "^3.5.1",
     "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
