--- a/manifest.json
+++ b/manifest.json
@@ -2,21 +2,23 @@
 {
   "name": "PingSpace",
   "short_name": "PingSpace",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#ff1744",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://ui-avatars.com/api/?name=PS&background=ff1744&color=fff&size=192&font-size=0.5",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='120' fill='%23ff1744'/%3E%3Cpath d='M298.67 42.67L64 320h170.67L192 469.33L426.67 192H256L298.67 42.67z' fill='white'/%3E%3C/svg%3E",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
-      "src": "https://ui-avatars.com/api/?name=PS&background=ff1744&color=fff&size=512&font-size=0.5",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='120' fill='%23ff1744'/%3E%3Cpath d='M298.67 42.67L64 320h170.67L192 469.33L426.67 192H256L298.67 42.67z' fill='white'/%3E%3C/svg%3E",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ]
 }
