--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "recharts": "^3.5.1",
     "lucide-react": "^0.556.0",
     "react-dom": "^19.2.1",
-    "@supabase/supabase-js": "^2.49.1",
-    "firebase": "^12.7.0"
+    "@supabase/supabase-js": "^2.49.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
